ARREGLE ALEMBIC, ya hace migraciones.

--- a/front/src/components/CoupleProfileForm/CoupleProfileForm.css
+++ b/front/src/components/CoupleProfileForm/CoupleProfileForm.css
@@ -18,7 +18,7 @@
     gap: 1.5rem;
 }
 
-.couple .upload-photo {
+.couple .upload-profile-photo {
     border: 6px solid #c51d86;
     border-radius: 50%;
     width: 180px;
