--- a/front/src/components/ProfileCard/ProfileCard.css
+++ b/front/src/components/ProfileCard/ProfileCard.css
@@ -1,20 +1,14 @@
 .profile-card {
     border-radius: 1rem;
-    padding: 1.5rem;
-    max-width: 300px;
+    padding: 2rem;
+    width: 90vw;                  /* que ocupe el 90% del ancho de la pantalla */
+    max-width: 600px;             /* máximo tamaño en pantallas grandes */
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     color: #333;
-    margin: 1rem;
+    margin: 4rem auto;            /* margen superior e inferior más grande */
     text-align: center;
 }
 
-.profile-card img.profile-picture {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-}
 
 .profile-card .username {
     font-size: 1.5rem;
@@ -49,4 +43,30 @@
 .profile-card.friendship {
     border: 2px solid #ffdb0a;
     background-color: #fffbe5;
+}
+
+.main-photo {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+
+.photo-gallery {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+    padding-top: 1rem;
+    scroll-snap-type: x mandatory;
+}
+
+.gallery-photo {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 0.5rem;
+    flex-shrink: 0;
+    scroll-snap-align: center;
+    border: 2px solid #ddd;
 }
