--- a/front/src/pages/Home/Home.css
+++ b/front/src/pages/Home/Home.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 2rem;
+    margin-bottom: 0.4rem;
 }
 
 .home-logo {
@@ -21,17 +21,18 @@
 
 .home-title {
     font-size: 1.5rem;
-    color: #333;
-    text-align: center;
+    font-weight: 600;
+    color: #1c1c1c;
+    margin: 0;
 }
 
 /* Fondo para cada modo */
 .couple-bg {
-    background-color: #fff0f7;
+    background-color: #292828;
 }
 
 .friendship-bg {
-    background-color: #fffbe5;
+    background-color: #292828;
 }
 
 .card-grid {
