--- a/front/src/pages/Home/Home.css
+++ b/front/src/pages/Home/Home.css
@@ -28,11 +28,11 @@
 
 /* Fondo para cada modo */
 .couple-bg {
-    background-color: #292828;
+    background-color: #ec7ac1;
 }
 
 .friendship-bg {
-    background-color: #292828;
+    background-color: #dcc542;
 }
 
 .card-grid {
